# CLI-Planner

./: .gitignore  CMakeLists.txt  README.md  main_test.cpp
include/model/: project.hpp  user.hpp
include/tasks/: reminder.hpp  task.hpp  urgent_collab.hpp
source/model/: project.cpp  user.cpp
source/tasks/: reminder.cpp  task.cpp  urgent_collab.cpp
test/: test1.txt  test2.txt  test3.txt  test4.txt
